--- a/package.json
+++ b/package.json
@@ -12,20 +12,24 @@
 		"prettier": "prettier --write 'src/**/*.{ts,tsx,js,jsx}'"
 	},
 	"dependencies": {
+		"@chakra-ui/react": "^2.3.2",
+		"@emotion/react": "^11.10.4",
+		"@emotion/styled": "^11.10.4",
+		"framer-motion": "^7.3.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.17",
 		"@types/react-dom": "^18.0.6",
-		"@vitejs/plugin-react": "^2.1.0",
-		"typescript": "^4.6.4",
-		"vite": "^3.1.0",
 		"@typescript-eslint/eslint-plugin": "^5.36.2",
 		"@typescript-eslint/parser": "^5.36.2",
+		"@vitejs/plugin-react": "^2.1.0",
 		"eslint": "^8.23.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-react": "^7.31.7",
-		"prettier": "^2.7.1"
+		"prettier": "^2.7.1",
+		"typescript": "^4.6.4",
+		"vite": "^3.1.0"
 	}
 }
