--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"@emotion/styled": "^11.10.4",
 		"framer-motion": "^7.3.2",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.3.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.17",
