--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@chakra-ui/react": "^2.3.2",
 		"@emotion/react": "^11.10.4",
 		"@emotion/styled": "^11.10.4",
+		"@iconify/react": "^4.0.0",
 		"framer-motion": "^7.3.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
