--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"prettier": "prettier --write 'src/**/*.{ts,tsx,js,jsx}'"
 	},
 	"dependencies": {
+		"@chakra-ui/icons": "^2.0.9",
 		"@chakra-ui/react": "^2.3.2",
 		"@emotion/react": "^11.10.4",
 		"@emotion/styled": "^11.10.4",
