--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@emotion/react": "^11.10.4",
 		"@emotion/styled": "^11.10.4",
 		"@iconify/react": "^4.0.0",
+		"@reduxjs/toolkit": "^1.8.5",
 		"framer-motion": "^7.3.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
