--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@iconify/react": "^4.0.0",
 		"@reduxjs/toolkit": "^1.8.5",
 		"framer-motion": "^7.3.2",
+		"immutability-helper": "^3.1.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.3.0"
