--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"immutability-helper": "^3.1.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-redux": "^8.0.2",
 		"react-router-dom": "^6.3.0"
 	},
 	"devDependencies": {
