--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@emotion/react": "^11.10.4",
 		"@emotion/styled": "^11.10.4",
 		"@hookform/devtools": "^4.2.2",
+		"@hookform/resolvers": "^2.9.8",
 		"@iconify/react": "^4.0.0",
 		"@reduxjs/toolkit": "^1.8.5",
 		"framer-motion": "^7.3.2",
@@ -26,7 +27,8 @@
 		"react-hook-form": "^7.35.0",
 		"react-number-format": "^5.0.0-beta.4",
 		"react-redux": "^8.0.2",
-		"react-router-dom": "^6.3.0"
+		"react-router-dom": "^6.3.0",
+		"yup": "^0.32.11"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.17",
