--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
 		"@reduxjs/toolkit": "^1.8.5",
 		"framer-motion": "^7.3.2",
 		"immutability-helper": "^3.1.1",
+		"immutable": "^4.1.0",
+		"lodash": "^4.17.21",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.35.0",
 		"react-number-format": "^5.0.0-beta.4",
 		"react-redux": "^8.0.2",
 		"react-router-dom": "^6.3.0",
+		"react-toastify": "^9.0.8",
 		"yup": "^0.32.11"
 	},
 	"devDependencies": {
