--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@hookform/resolvers": "^2.9.8",
 		"@iconify/react": "^4.0.0",
 		"@reduxjs/toolkit": "^1.8.5",
+		"dayjs": "^1.11.5",
 		"framer-motion": "^7.3.2",
 		"immutability-helper": "^3.1.1",
 		"immutable": "^4.1.0",
