--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"react-redux": "^8.0.2",
 		"react-router-dom": "^6.3.0",
 		"react-toastify": "^9.0.8",
+		"redux-persist": "^6.0.0",
 		"yup": "^0.32.11"
 	},
 	"devDependencies": {
