--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
 		"react-router-dom": "^6.3.0",
 		"react-toastify": "^9.0.8",
 		"redux-persist": "^6.0.0",
+		"uuid": "^9.0.0",
 		"yup": "^0.32.11"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.17",
 		"@types/react-dom": "^18.0.6",
+		"@types/uuid": "^8.3.4",
 		"@typescript-eslint/eslint-plugin": "^5.36.2",
 		"@typescript-eslint/parser": "^5.36.2",
 		"@vitejs/plugin-react": "^2.1.0",
