--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
 		"@emotion/react": "^11.10.4",
 		"@emotion/styled": "^11.10.4",
 		"@fontsource/roboto": "^4.5.8",
+		"@fullcalendar/daygrid": "^5.11.3",
+		"@fullcalendar/interaction": "^5.11.3",
+		"@fullcalendar/list": "^5.11.3",
+		"@fullcalendar/react": "^5.11.2",
+		"@fullcalendar/timegrid": "^5.11.3",
 		"@hookform/devtools": "^4.2.2",
 		"@hookform/resolvers": "^2.9.8",
 		"@iconify/react": "^4.0.0",
